<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".peperoni">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="310dp"
        android:layout_height="245dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="373dp"
        app:srcCompat="@drawable/peperoni" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="281dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/pizzapeperoni"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="240dp"
        android:gravity="center"
        android:text="@string/textpizza"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editnamepizza"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="185dp"
        android:layout_toStartOf="@+id/editpreciopizza"
        android:background="@color/white"
        android:hint="@string/namepiz" />

    <EditText
        android:id="@+id/editcantidadpizza"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="127dp"
        android:background="@color/white"
        android:hint="@string/cantidad" />

    <EditText
        android:id="@+id/editpreciopizza"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="186dp"
        android:background="@color/white"
        android:hint="@string/precio" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="303dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/pedido" />
</RelativeLayout>